# ugc

./: README.md
quiz/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
quiz/src/core/: settings.py  urls.py
quiz/src/quiz/: paginations.py  permissions.py  serializers.py  urls.py  views.py
quiz/src/quiz/migrations/: 0001_initial.py  0002_question.py  0003_questionvariant.py  0004_session.py  0005_answer.py  0006_remove_answer_custom_answer.py  0007_remove_session_status.py  0008_remove_question_allows_custom_answer.py
quiz/src/quiz/models/: __init__.py  answer.py  question.py  quiz.py  session.py
